--- a/ss-tools/Cargo.toml
+++ b/ss-tools/Cargo.toml
@@ -8,8 +8,10 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 dotenvy = "0.15.7"
 fxhash = "0.2.1"
+indicatif = "0.17.9"
 reqwest = "0.12.9"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
