--- a/ss-tools/Cargo.toml
+++ b/ss-tools/Cargo.toml
@@ -17,6 +17,8 @@ reqwest = "0.12.9"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
 tokio = { version = "1.42.0", features = ["full"] }
+tracing = { version = "0.1.41", features = ["log"] }
+tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
 
 [dev-dependencies]
 serial_test = "3.2.0"
